tests/errors/lex11.kt
fun main() {
    val s = "\q"
}